# jmpspace

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  makefile  next_steps.txt  run.sh  setup_misc.ksh
client/: .gitignore  Converter.elm  Demo.elm  Generate-Contracts.ps1  Main.elm  Make-Elm.ps1  Step.elm  elm-package.json  generate_contracts  makeElm  makefile
client/Contracts/: Common.elm  Controls.elm  Ship.elm  World.elm
client/Native/: Converter.js
client/binary/: Binary.elm
client/native/: WsTasks.elm
client/site/: index.html
client/src/: Main.elm
contracts/: Cargo.toml  Ship.capnp  Ship.capnp.go  build.rs  makefile  ship.proto  world.proto
contracts/entities/: ship.proto
contracts/physics_server/: session.proto
contracts/rust/: Cargo.toml
contracts/spaceServer/: session.proto
contracts/space_server/: game.proto  physics.proto  player.proto  server.proto  session.proto  structure.proto  world.proto
contracts/src/: ship.proto  (+1 more)
example_simplefly/: simplefly.rs
lc4/: Cargo.toml
peer/: Cargo.toml  gen_contracts.sh
physics-server/: build.gradle
schema/: Ship.capnp
server/: action.go  chat.go  contracts  design.txt  game.go  lib  main.go  makefile  sim.go
sim/: Cargo.toml  fail.sh  makefile
sim/example_simplefly/: Cargo.toml
sim/include/: sim.h
sim/src/: constants.rs  demo.rs  lib.rs  physics.rs  ship.rs  sim.rs  snapshot.rs  tagtree.rs
spaceServer/: build.gradle
space_server/: build.gradle  gradlew
src/: constants.rs  lib.rs  ship.rs  tagtree.rs
uppaal/: connection.xml  queries.q
ws/: Cargo.toml  makefile
(+73 files in other folders)
