[package]

name = "sim"
version = "0.0.1"
authors = ["John P Mayer <john.p.mayer.jr@gmail.com>"]

[lib]
name = "sim"
path = "src/lib.rs"

[dependencies]
nalgebra = "*"
ncollide = "*"

[dependencies.lc4]
git = "https://github.com/jmpspace/lc4"

[dependencies.nphysics]
features = [ "2df64" ]
git = "https://github.com/sebcrozet/nphysics"
