[package]
name = "sim"
version = "0.0.1"
authors = ["John P Mayer <john.p.mayer.jr@gmail.com>"]

[lib]
name = "sim"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
nalgebra = "*"
ncollide = "*"
ncollide_entities = "*"
num = "*"

[dependencies.contracts]
path = "../contracts/rust"

[dependencies.lc4]
path = "../lc4"

[dependencies.nphysics]
features = [ "2df64" ]
git = "https://github.com/sebcrozet/nphysics"
