[package]
name = "sim"
version = "0.0.1"
authors = ["John P Mayer <john.p.mayer.jr@gmail.com>"]

[lib]
name = "sim"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
ecs = "*"
libc = "0.1.*"
nalgebra = "*"
ncollide = "*"
num = "*"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[dependencies.contracts]
path = "../contracts/rust"

[dependencies.lc4]
path = "../lc4"

[dependencies.nphysics]
features = [ "2df64" ]
git = "https://github.com/sebcrozet/nphysics"
